--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -1438,12 +1438,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "id": "0e0ad996",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['several',\n",
+       " 'hence',\n",
+       " 'system',\n",
+       " 'namely',\n",
+       " 'however',\n",
+       " 'top',\n",
+       " 'before',\n",
+       " 'yours',\n",
+       " 'towards',\n",
+       " 'well']"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### Write your code here"
+    "from sklearn.feature_extraction import _stop_words\n",
+    "stop_words = list(_stop_words.ENGLISH_STOP_WORDS)\n",
+    "# print the first ten words\n",
+    "stop_words[:10]"
    ]
   },
   {
