--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 346,
    "id": "eff5d5e8",
    "metadata": {},
    "outputs": [],
@@ -548,7 +548,7 @@
     "    # filter out the stop words\n",
     "    filtered_rdd = cleaned_rdd.subtractByKey(stop_words_counts)\n",
     "    # return word count RDD\n",
-    "    return sc.parallelize(filtered_rdd.countByValue().items())"
+    "    return sc.parallelize(filtered_rdd.collect())"
    ]
   },
   {
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 347,
    "id": "08a24f66",
    "metadata": {},
    "outputs": [
@@ -578,6 +578,7 @@
     }
    ],
    "source": [
+    "#print(process_RDD(\"data/84.txt\").collect())\n",
     "book_84_filtered = process_RDD(\"data/84.txt\")\n",
     "print(\"Book 84 distinct words: \" + str(book_84_filtered.distinct().count()))\n",
     "book_398_filtered = process_RDD(\"data/398.txt\")\n",
@@ -598,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 348,
    "id": "ac6b73e0",
    "metadata": {},
    "outputs": [
@@ -607,11 +608,11 @@
      "output_type": "stream",
      "text": [
       "book 398 and book 3296 comparison: \n",
-      "435\n",
+      "1790\n",
       "book 84 and book 398 comparison: \n",
-      "414\n",
+      "1691\n",
       "book 84 and book 3296 comparison: \n",
-      "816\n"
+      "3608\n"
      ]
     }
    ],
@@ -640,7 +641,7 @@
    "id": "6587ae14",
    "metadata": {},
    "source": [
-    "No, it is not a good idea as it is not an accurate indicator of topic similarity. For example, some subjects have a lot of filler words in comparison to others. This does not necessarily mean they are not related."
+    "No, it is not a good idea as it is not an accurate indicator of topic similarity. With reference to the hint above (comparison of book_84 and book_3296), we can see that they have the most number of distinct words (both over 7000), whereas Book 398 has only 2421 distinct words. However, recall that Books 398 and 3296 both pertain to religion. Therefore, the comparison between Books 398 and 3926 should have more words in common than Book 84 and 398. However, the output to Q14 says otherwise."
    ]
   },
   {
@@ -701,22 +702,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 453,
    "id": "c3cae946",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  2., 156.,   3., ...,   2.,   8.,   1.],\n",
+       "       [  3., 100.,   8., ...,   4.,  11.,  28.],\n",
+       "       [  3., 102.,   3., ...,   1.,   8.,   1.],\n",
+       "       [ 50., 136.,  24., ...,   1.,   9.,   1.]])"
+      ]
+     },
+     "execution_count": 453,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "counts_matrix = np.zeros([4,1])\n",
     "\n",
     "book_43_filtered = process_RDD(\"data/43.txt\")\n",
     "\n",
-    "all_join = book_43_filtered.join(book_84_filtered).join(book_398_filtered).join(book_3296_filtered).count()\n",
+    "all_join = book_43_filtered.join(book_84_filtered).join(book_398_filtered).join(book_3296_filtered)\n",
     "\n",
-    "counts_matrix[0, :] = [all_join] \n",
-    "counts_matrix[1, :] = [all_join] \n",
-    "counts_matrix[2, :] = [all_join] \n",
-    "counts_matrix[3, :] = [all_join] "
+    "all_join = all_join.mapValues(lambda x: x[0] + (x[1], ))\n",
+    "\n",
+    "counts_matrix = np.zeros([4, all_join.count()])\n",
+    "\n",
+    "all_join_counts = all_join.map(lambda x: x[1])\n",
+    "book_43_counts = all_join_counts.map(lambda x: x[0]).map(lambda x: x[0]).collect()\n",
+    "book_84_counts = all_join_counts.map(lambda x: x[0]).map(lambda x: x[1]).collect()\n",
+    "book_398_counts = all_join_counts.map(lambda x: x[1]).collect()\n",
+    "book_3296_counts = all_join_counts.map(lambda x: x[2]).collect()\n",
+    "\n",
+    "counts_matrix[0, :] = book_43_counts\n",
+    "counts_matrix[1, :] = book_84_counts\n",
+    "counts_matrix[2, :] = book_398_counts\n",
+    "counts_matrix[3, :] = book_3296_counts\n",
+    "\n",
+    "counts_matrix"
    ]
   },
   {
@@ -731,18 +757,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 457,
    "id": "7b6a81dd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Euclidean distance between book_398 and book_3296 is: 1156.6628722320086\n",
+      "The Euclidean distance between book_84 and book_398 is: 751.6688100486809\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.spatial.distance import euclidean \n",
+    "print(f\"The Euclidean distance between book_398 and book_3296 is: {euclidean(book_398_counts, book_3296_counts)}\")\n",
+    "print(f\"The Euclidean distance between book_84 and book_398 is: {euclidean(book_84_counts, book_398_counts)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "89981b46",
    "metadata": {},
    "source": [
-    "#### Write your justification here"
+    "The Euclidean distance is indeed a better indicator than the similar words metric we used earlier. As can be seen above, our results agree with our hypothesis this time."
    ]
   },
   {
@@ -760,7 +799,9 @@
    "id": "5c8c6de1",
    "metadata": {},
    "source": [
-    "#### Write your answer here\n"
+    "#### Write your answer here\n",
+    "------\n",
+    "**Come back to this part later**"
    ]
   },
   {
@@ -801,12 +842,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 475,
    "id": "3ad5e6ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "450017"
+      ]
+     },
+     "execution_count": 475,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### Write your code here"
+    "# create spark session\n",
+    "from pyspark.sql import SparkSession\n",
+    "ss = SparkSession.builder.appName('part_3').getOrCreate()\n",
+    "flight_info = ss.read.csv(\"data/flight_info.csv\", header=True)\n",
+    "flight_info.count()"
    ]
   },
   {
@@ -823,12 +879,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 485,
    "id": "73fd7b0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+\n",
+      "|UniqueCarrier|\n",
+      "+-------------+\n",
+      "|           UA|\n",
+      "|           NK|\n",
+      "|           AA|\n",
+      "|           EV|\n",
+      "|           B6|\n",
+      "|           DL|\n",
+      "|           OO|\n",
+      "|           F9|\n",
+      "|           HA|\n",
+      "|           AS|\n",
+      "|           WN|\n",
+      "|           VX|\n",
+      "+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### Write your code here"
+    "flight_info.select(\"UniqueCarrier\").distinct().show()"
    ]
   },
   {
@@ -849,12 +929,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 565,
    "id": "c72cff25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-----+\n",
+      "|UniqueCarrier|count|\n",
+      "+-------------+-----+\n",
+      "|           UA|17701|\n",
+      "|           NK| 4151|\n",
+      "|           AA|23461|\n",
+      "|           EV|11596|\n",
+      "|           B6| 9396|\n",
+      "|           DL|24334|\n",
+      "|           OO|16751|\n",
+      "|           F9| 2988|\n",
+      "|           HA| 1939|\n",
+      "|           AS| 4488|\n",
+      "|           WN|47472|\n",
+      "|           VX| 2648|\n",
+      "+-------------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### Write your code here"
+    "delays = flight_info.select('UniqueCarrier', 'DepTime', 'CRSDepTime').where(\"int(DepTime) > CRSDepTime\")\n",
+    "delays.groupBy('UniqueCarrier').count().show()"
    ]
   },
   {
