--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 6,
    "id": "3ad5e6ad",
    "metadata": {},
    "outputs": [
@@ -852,7 +852,7 @@
        "450017"
       ]
      },
-     "execution_count": 475,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 7,
    "id": "73fd7b0b",
    "metadata": {},
    "outputs": [
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 107,
    "id": "c72cff25",
    "metadata": {},
    "outputs": [
@@ -940,25 +940,25 @@
       "+-------------+-----+\n",
       "|UniqueCarrier|count|\n",
       "+-------------+-----+\n",
-      "|           UA|17701|\n",
-      "|           NK| 4151|\n",
-      "|           AA|23461|\n",
-      "|           EV|11596|\n",
-      "|           B6| 9396|\n",
-      "|           DL|24334|\n",
-      "|           OO|16751|\n",
-      "|           F9| 2988|\n",
-      "|           HA| 1939|\n",
-      "|           AS| 4488|\n",
-      "|           WN|47472|\n",
-      "|           VX| 2648|\n",
+      "|           UA|19594|\n",
+      "|           NK| 4435|\n",
+      "|           AA|26291|\n",
+      "|           EV|12340|\n",
+      "|           B6|10406|\n",
+      "|           DL|28962|\n",
+      "|           OO|17924|\n",
+      "|           F9| 3181|\n",
+      "|           HA| 2265|\n",
+      "|           AS| 4966|\n",
+      "|           WN|54557|\n",
+      "|           VX| 2871|\n",
       "+-------------+-----+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "delays = flight_info.select('UniqueCarrier', 'DepTime', 'CRSDepTime').where(\"int(DepTime) > CRSDepTime\")\n",
+    "delays = flight_info.select('UniqueCarrier', 'DepTime', 'CRSDepTime').where(\"DepTime > CRSDepTime\")\n",
     "delays.groupBy('UniqueCarrier').count().show()"
    ]
   },
@@ -988,12 +988,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "30cea22b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+--------------------+-----+\n",
+      "|UniqueCarrier|                 _c1|count|\n",
+      "+-------------+--------------------+-----+\n",
+      "|           B6|     JetBlue Airways|10406|\n",
+      "|           F9|   Frontier Airlines| 3181|\n",
+      "|           OO|             SkyWest|17924|\n",
+      "|           NK|     Spirit Airlines| 4435|\n",
+      "|           HA|   Hawaiian Airlines| 2265|\n",
+      "|           EV|Atlantic Southeas...|12340|\n",
+      "|           UA|     United Airlines|19594|\n",
+      "|           DL|     Delta Air Lines|28962|\n",
+      "|           AA|   American Airlines|26291|\n",
+      "|           AS|     Alaska Airlines| 4966|\n",
+      "|           WN|  Southwest Airlines|54557|\n",
+      "|           VX|      Virgin America| 2871|\n",
+      "+-------------+--------------------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### Write your code here"
+    "airlines_info = ss.read.csv(\"data/airlines.csv\")\n",
+    "airline_names = airlines_info.select(airlines_info.columns[1:3])\n",
+    "joined = flight_info.select('UniqueCarrier', 'DepTime', 'CRSDepTime').where(\"DepTime > CRSDepTime\").join(airlines_info).where(delays.UniqueCarrier == airlines_info._c3).groupBy('UniqueCarrier', '_c1')\n",
+    "joined.count().show()"
    ]
   },
   {
@@ -1013,12 +1042,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "f9971baa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-------------+-----+\n",
+      "|DayOfWeek|UniqueCarrier|count|\n",
+      "+---------+-------------+-----+\n",
+      "|        7|           NK|  832|\n",
+      "|        3|           DL| 3052|\n",
+      "|        3|           EV| 1364|\n",
+      "|        5|           OO| 2603|\n",
+      "|        1|           AA| 5117|\n",
+      "|        7|           F9|  534|\n",
+      "|        1|           OO| 3467|\n",
+      "|        5|           EV| 1748|\n",
+      "|        1|           F9|  632|\n",
+      "|        7|           EV| 1997|\n",
+      "|        6|           AA| 2800|\n",
+      "|        7|           B6| 1884|\n",
+      "|        3|           B6| 1253|\n",
+      "|        6|           B6| 1027|\n",
+      "|        1|           B6| 1892|\n",
+      "|        1|           DL| 6292|\n",
+      "|        3|           OO| 2236|\n",
+      "|        5|           B6| 1309|\n",
+      "|        4|           AA| 3575|\n",
+      "|        7|           DL| 5254|\n",
+      "+---------+-------------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### Write your code here"
+    "flight_info.select(\"DayOfWeek\", \"UniqueCarrier\").where(\"DepTime > CRSDepTime\").groupBy('DayOfWeek', 'UniqueCarrier').count().show()"
    ]
   },
   {
@@ -1035,12 +1097,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "13ae9b5e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Write your code here"
+    "# normalize"
    ]
   },
   {
@@ -1058,12 +1120,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "7df43da8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-------------+-----+\n",
+      "|DayOfWeek|UniqueCarrier|count|\n",
+      "+---------+-------------+-----+\n",
+      "|        7|           NK|  832|\n",
+      "|        3|           DL| 3052|\n",
+      "|        3|           EV| 1364|\n",
+      "|        5|           OO| 2603|\n",
+      "|        1|           AA| 5117|\n",
+      "|        7|           F9|  534|\n",
+      "|        1|           OO| 3467|\n",
+      "|        5|           EV| 1748|\n",
+      "|        1|           F9|  632|\n",
+      "|        7|           EV| 1997|\n",
+      "|        6|           AA| 2800|\n",
+      "|        7|           B6| 1884|\n",
+      "|        3|           B6| 1253|\n",
+      "|        6|           B6| 1027|\n",
+      "|        1|           B6| 1892|\n",
+      "|        1|           DL| 6292|\n",
+      "|        3|           OO| 2236|\n",
+      "|        5|           B6| 1309|\n",
+      "|        4|           AA| 3575|\n",
+      "|        7|           DL| 5254|\n",
+      "+---------+-------------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "CPU times: user 2.32 ms, sys: 9.69 ms, total: 12 ms\n",
+      "Wall time: 530 ms\n"
+     ]
+    }
+   ],
    "source": [
-    "### Write your code here"
+    "%%time\n",
+    "flight_info.select(\"DayOfWeek\", \"UniqueCarrier\").where(\"DepTime > CRSDepTime\").groupBy('DayOfWeek', 'UniqueCarrier').count().show()"
    ]
   },
   {
@@ -1078,12 +1176,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "2e951d64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-------------+-----+\n",
+      "|DayOfWeek|UniqueCarrier|count|\n",
+      "+---------+-------------+-----+\n",
+      "|        7|           NK|  832|\n",
+      "|        3|           DL| 3052|\n",
+      "|        3|           EV| 1364|\n",
+      "|        5|           OO| 2603|\n",
+      "|        1|           AA| 5117|\n",
+      "|        7|           F9|  534|\n",
+      "|        1|           OO| 3467|\n",
+      "|        5|           EV| 1748|\n",
+      "|        1|           F9|  632|\n",
+      "|        7|           EV| 1997|\n",
+      "|        6|           AA| 2800|\n",
+      "|        7|           B6| 1884|\n",
+      "|        3|           B6| 1253|\n",
+      "|        6|           B6| 1027|\n",
+      "|        1|           B6| 1892|\n",
+      "|        1|           DL| 6292|\n",
+      "|        3|           OO| 2236|\n",
+      "|        5|           B6| 1309|\n",
+      "|        4|           AA| 3575|\n",
+      "|        7|           DL| 5254|\n",
+      "+---------+-------------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "CPU times: user 7.06 ms, sys: 2.75 ms, total: 9.8 ms\n",
+      "Wall time: 451 ms\n"
+     ]
+    }
+   ],
    "source": [
-    "### Write your code here"
+    "%%time\n",
+    "flight_info.select(\"DayOfWeek\", \"UniqueCarrier\").where(\"DepTime > CRSDepTime\").groupBy('DayOfWeek', 'UniqueCarrier').count().show()"
    ]
   },
   {
